src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_del_opa1_csqs@3-193311167-ATGT-T.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: T
  consequences:
    - start_lost
    - conservative_inframe_deletion
  putative_impact: high
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 1
    total: 31
  hgvs_g: g.193311167_193311170delinsT
  hgvs_n: n.171_173del
  hgvs_c: c.1_3del
  hgvs_p: p.Met1?
  cdna_pos:
    ord: 171
    total: 6429
  cds_pos:
    ord: 1
    total: 3048
  protein_pos: ~
  distance: 0
  strand: 1
  messages: ~
