src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_del_opa1_csqs@3-193311170-TGGC-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - conservative_inframe_deletion
  putative_impact: moderate
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 1
    total: 31
  hgvs_g: g.193311170_193311173delinsC
  hgvs_c: c.4_6del
  hgvs_p: p.Trp2del
  cdna_pos:
    ord: 174
    total: 6429
  cds_pos:
    ord: 4
    total: 3048
  protein_pos:
    ord: 2
    total: 1016
  distance: 0
  strand: 1
  messages: ~
