src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_del_opa1_csqs@3-193409913-ATAA-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_lost
    - feature_elongation
  putative_impact: HIGH
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - Coding
    - ManeSelect
  rank:
    ord: 30
    total: 31
  hgvs_t: c.3046_3048del
  hgvs_p: p.Ter1016IleextTer12
  tx_pos:
    ord: 3216
    total: 6429
  cds_pos:
    ord: 3046
    total: 3048
  protein_pos:
    ord: 1016
    total: 1016
  distance: 0
  strand: 1
  messages: ~
