src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41197823-C-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
snapshot_kind: text
---
- allele:
    Alt:
      alternative: A
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197823C>A
  hgvs_c: c.5468-4G>T
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 4
  strand: -1
  messages: ~
